--- a/GitTut.html
+++ b/GitTut.html
@@ -7,6 +7,8 @@
     <title>GitTut</title>
 </head>
 <body>
-    
+    <h1>Welcome</h1>
+    <h3>to GitHub Tutorial</h3>
+    <h2>Kindly Follow these steps: </h2>
 </body>
 </html>
