--- a/GitTut.html
+++ b/GitTut.html
@@ -10,5 +10,11 @@
     <h1>Welcome</h1>
     <h3>to GitHub Tutorial</h3>
     <h2>Kindly Follow these steps: </h2>
+    <ul>
+        <li>Create an account on github<img src="S1.png" alt="Git SignUp"></li>
+        <li>Create a folder on your pc<img src="S2.png" alt="new folder"></li>
+        <li>Open cmd from the folder path<img src="S3.png" alt="Command Prompt"></li>
+    
+        </ul>
 </body>
 </html>
