--- a/GitTut.html
+++ b/GitTut.html
@@ -14,7 +14,9 @@
         <li>Create an account on github<img src="S1.png" alt="Git SignUp"></li>
         <li>Create a folder on your pc<img src="S2.png" alt="new folder"></li>
         <li>Open cmd from the folder path<img src="S3.png" alt="Command Prompt"></li>
-    
+        <li>Write command git init<img src="S4.png" alt="Git init"></li>
+        <li>Add some files in your folder<img src="S6.png" alt="New File"></li>
+        <li>Write command git status<img src="S7.png"></li>
         </ul>
 </body>
 </html>
