--- a/GitTut.html
+++ b/GitTut.html
@@ -16,7 +16,9 @@
         <li>Open cmd from the folder path<img src="S3.png" alt="Command Prompt"></li>
         <li>Write command git init<img src="S4.png" alt="Git init"></li>
         <li>Add some files in your folder<img src="S6.png" alt="New File"></li>
-        <li>Write command git status<img src="S7.png"></li>
+        <li>Write command git status<img src="S10.png"></li>
+        <li>Write commmand git add .<img src="S9.png"></li>
+        <li>Make a repository Online<img src="S8.png"><img src="repo1.png"></li>
         </ul>
 </body>
 </html>
