--- a/GitTut.html
+++ b/GitTut.html
@@ -18,7 +18,9 @@
         <li>Add some files in your folder<img src="S6.png" alt="New File"></li>
         <li>Write command git status<img src="S10.png"></li>
         <li>Write commmand git add .<img src="S9.png"></li>
-        <li>Make a repository Online<img src="S8.png"><img src="repo1.png"></li>
+        <li>Make a repository Online<img src="S8.png"></li>
+        <li>Write command git commit<img src="S12.png"></li>
+        <li>Write command git push<img src="S11.png"><img src="S13.png"> </li>
         </ul>
 </body>
 </html>
